Songs to VK (0.3)

	* Добавлена замена амперсанда в названиях песен на "and"
	* Добавлен вывод ошибок, поступивших от сервера, в терминал и лог-файл
	
-Konstantin Zyryanov <post.herzog@gmail.com> Сб. 21 февр. 2015 21:34:37 YEKT 

Songs to VK (0.2)

	* Добавлена возможность запуска с параметрами
	* Добавлена возможность устанавливать в статусе пользовательский текст, в том числе вместе со стандартным
	* Добавлена возможности завершения запущенного ранее (в том числе в фоне) экземпляра скрипта с установкой выходного статуса
	* Добавлена краткая справка
	* Небольшие исправления и улучшения скрипта
	* Добавлены комментарии
	
-Konstantin Zyryanov <post.herzog@gmail.com> Пн. 13 окт. 2014 23:36:26 YEKT 